--- a/Pulzní oxymetrie Truksa, Tvrdík/Formality/Bibliografie.bib
+++ b/Pulzní oxymetrie Truksa, Tvrdík/Formality/Bibliografie.bib
@@ -1,122 +1,130 @@
 @incollection{KYRIACOU,
-    title = {Optical Techniques for Blood and Tissue Oxygenation},
-    editor = {Roger Narayan},
-    booktitle = {Encyclopedia of Biomedical Engineering},
-    publisher = {Elsevier},
-    address = {Oxford},
-    pages = {461-472},
-    year = {2019},
-    isbn = {978-0-12-805144-3},
-    doi = {10.1016/B978-0-12-801238-3.10886-4},
-    author = {Panayiotis Kyriacou and Karthik Budidha and Tomas Y Abay},
+  title     = {Optical Techniques for Blood and Tissue Oxygenation},
+  editor    = {Roger Narayan},
+  booktitle = {Encyclopedia of Biomedical Engineering},
+  publisher = {Elsevier},
+  address   = {Oxford},
+  pages     = {461-472},
+  year      = {2019},
+  isbn      = {978-0-12-805144-3},
+  doi       = {10.1016/B978-0-12-801238-3.10886-4},
+  author    = {Panayiotis Kyriacou and Karthik Budidha and Tomas Y Abay}
 }
- @article {matthes,
-    title={Untersuchungen über die Sauerstoffsättigung des Menschlichen arterienblutes},
-    volume={179},
-    DOI={10.1007/bf01862691},
-    number={6},
-    journal={Naunyn-Schmiedebergs Archiv für Experimentelle Pathologie und Pharmakologie},
-    author={Matthes, Karl},
-    year={1935},
-    pages={698–711}
+ @article{matthes,
+  title     = {Untersuchungen über die Sauerstoffsättigung des Menschlichen arterienblutes},
+  volume    = {179},
+  doi       = {10.1007/bf01862691},
+  number    = {6},
+  journal   = {Naunyn-Schmiedebergs Archiv für Experimentelle Pathologie und Pharmakologie},
+  author    = {Matthes, Karl},
+  year      = {1935},
+  pages     = {698–711}
 } 
-@article {TremperPulseOximetry,
-	Title = {Pulse oximetry},
-	Author = {Tremper, KK},
-	doi = {10.1378/chest.95.4.713},
-	Number = {4},
-	Volume = {95},
-	Month = {April},
-	Year = {1989},
-	Journal = {Chest},
-	ISSN = {0012-3692},
-	Pages = {713—715},
+@article{TremperPulseOximetry,
+  title     = {Pulse oximetry},
+  author    = {Tremper, KK},
+  doi       = {10.1378/chest.95.4.713},
+  number    = {4},
+  volume    = {95},
+  month     = {April},
+  year      = {1989},
+  journal   = {Chest},
+  issn      = {0012-3692},
+  pages     = {713—715}
 }
 @article{1942oximeter,
-  title={The oximeter, an instrument for measuring continuously the oxygen saturation of arterial blood in man},
-  author={Millikan, Glenn A},
-  journal={Review of scientific Instruments},
-  volume={13},
-  number={10},
-  pages={434--444},
-  year={1942},
-  doi = {10.1063/1.1769941},
-  publisher={American Institute of Physics}
+  title     = {The oximeter, an instrument for measuring continuously the oxygen saturation of arterial blood in man},
+  author    = {Millikan, Glenn A},
+  journal   = {Review of scientific Instruments},
+  volume    = {13},
+  number    = {10},
+  pages     = {434--444},
+  year      = {1942},
+  doi       = {10.1063/1.1769941},
+  publisher = {American Institute of Physics}
+}
+@article{Cooper,
+  author    = {Alvero-Cruz, José Ramón and Carnero, Elvis A. and Giráldez García, Manuel Avelino and Alacid, Fernando and Rosemann, Thomas and Nikolaidis, Pantelis T. and Knechtle, Beat},
+  title     = {Cooper Test Provides Better Half-Marathon Performance Prediction in Recreational Runners Than Laboratory Tests},
+  journal   = {Frontiers in Physiology},
+  volume    = {10},
+  year      = {2019},
+  doi       = {10.3389/fphys.2019.01349}
 }
 @article{maxHR,
-    author = {Nes, B. M. and Janszky, I. and Wisløff, U. and Støylen, A. and Karlsen, T.},
-    title = {Age-predicted maximal heart rate in healthy subjects: The HUNT Fitness Study},
-    journal = {Scandinavian Journal of Medicine \& Science in Sports},
-    volume = {23},
-    number = {6},
-    pages = {697-704},
-    doi = {https://doi.org/10.1111/j.1600-0838.2012.01445.x},
-    year = {2013}
+  author    = {Nes, B. M. and Janszky, I. and Wisløff, U. and Støylen, A. and Karlsen, T.},
+  title     = {Age-predicted maximal heart rate in healthy subjects: The HUNT Fitness Study},
+  journal   = {Scandinavian Journal of Medicine \& Science in Sports},
+  volume    = {23},
+  number    = {6},
+  pages     = {697-704},
+  doi       = {10.1111/j.1600-0838.2012.01445.x},
+  year      = {2013}
 }
 @article{sportuse,
-  title={The use of the \text{SpO}$_2$ to \text{FiO}$_2$ ratio to individualize the hypoxic dose in sport science, exercise, and health settings},
-  doi = {https://doi.org/10.3389/fphys.2020.570472},
-  author={Soo, Jacky and Girard, Olivier and Ihsan, Mohammed and Fairchild, Timothy},
-  journal={Frontiers in Physiology},
-  pages={1415},
-  year={2020},
-  publisher={Frontiers}
+  title     = {The use of the \text{SpO}$_2$ to \text{FiO}$_2$ ratio to individualize the hypoxic dose in sport science, exercise, and health settings},
+  doi       = {https://doi.org/10.3389/fphys.2020.570472},
+  author    = {Soo, Jacky and Girard, Olivier and Ihsan, Mohammed and Fairchild, Timothy},
+  journal   = {Frontiers in Physiology},
+  pages     = {1415},
+  year      = {2020},
+  publisher = {Frontiers}
 }
 @article{O2terapie,
-  title={Acute oxygen therapy},
-  author={Bateman, NT and Leach, RM},
-  journal={Bmj},
-  volume={317},
-  number={7161},
-  pages={798--801},
-  year={1998},
-  publisher={British Medical Journal Publishing Group},
-  doi = {https://doi.org/10.1136/bmj.317.7161.798}
+  title     = {Acute oxygen therapy},
+  author    = {Bateman, NT and Leach, RM},
+  journal   = {BMJ},
+  volume    = {317},
+  number    = {7161},
+  pages     = {798--801},
+  year      = {1998},
+  publisher = {British Medical Journal Publishing Group},
+  doi       = {https://doi.org/10.1136/bmj.317.7161.798}
 }
 @incollection{monitoring,
-  title={Patient monitoring systems},
-  author={Gardner, Reed M and Clemmer, Terry P and Evans, R Scott and Mark, Roger G},
-  booktitle={Biomedical Informatics},
-  pages={561--591},
-  year={2014},
-  publisher={Springer},
-  doi = {https://doi.org/10.1007/978-1-4471-4474-8\_19}
+  title     = {Patient monitoring systems},
+  author    = {Gardner, Reed M and Clemmer, Terry P and Evans, R Scott and Mark, Roger G},
+  booktitle = {Biomedical Informatics},
+  pages     = {561--591},
+  year      = {2014},
+  publisher = {Springer},
+  doi       = {https://doi.org/10.1007/978-1-4471-4474-8\_19}
 }
 @article{fio2,
-  title={Peripheral chemoreceptor responsiveness and hypoxic pulmonary vasoconstriction in humans},
-  doi = {https://doi.org/10.1089/ham.2013.1072},
-  author={Albert, Tyler J and Swenson, Erik R},
-  journal={High Altitude Medicine \& Biology},
-  volume={15},
-  number={1},
-  pages={15--20},
-  year={2014},
-  publisher={Mary Ann Liebert, Inc. 140 Huguenot Street, 3rd Floor New Rochelle, NY 10801 USA}
+  title     = {Peripheral chemoreceptor responsiveness and hypoxic pulmonary vasoconstriction in humans},
+  doi       = {https://doi.org/10.1089/ham.2013.1072},
+  author    = {Albert, Tyler J and Swenson, Erik R},
+  journal   = {High Altitude Medicine \& Biology},
+  volume    = {15},
+  number    = {1},
+  pages     = {15--20},
+  year      = {2014},
+  publisher = {Mary Ann Liebert, Inc. 140 Huguenot Street, 3rd Floor New Rochelle, NY 10801 USA}
 }
  @misc{ratznium_2006,
-    title={File:Oxyhaemoglobin Dissociation curve.png},
-    url={https://commons.wikimedia.org/wiki/File:Oxyhaemoglobin_dissociation_curve.png},
-    journal={File:Oxyhaemoglobin dissociation curve.png - Wikimedia Commons},
-    publisher={commons.wikimedia.org},
-    author={Ratznium},
-    year={2006},
-    note = {[online, citováno 2022-02-07]}
+  title     = {File:Oxyhaemoglobin Dissociation curve.png},
+  url       = {https://commons.wikimedia.org/wiki/File:Oxyhaemoglobin_dissociation_curve.png},
+  journal   = {File:Oxyhaemoglobin dissociation curve.png - Wikimedia Commons},
+  publisher = {commons.wikimedia.org},
+  author    = {Ratznium},
+  year      = {2006},
+  note      = {[online, citováno 2022-02-07]}
 }
  @misc{wearables,
-    title={About one-in-five Americans use a smart watch or fitness tracker},
-    url={https://www.pewresearch.org/fact-tank/2020/01/09/about-one-in-five-americans-use-a-smart-watch-or-fitness-tracker/},
-    journal={Pew Research Center},
-    publisher={Pew Research Center},
-    author={Vogels, Emily A.},
-    year={2020},
-    month={Aug},
-    note = {[online, citováno 2022-03-13]}
+  title     = {About one-in-five Americans use a smart watch or fitness tracker},
+  url       = {https://www.pewresearch.org/fact-tank/2020/01/09/about-one-in-five-americans-use-a-smart-watch-or-fitness-tracker/},
+  journal   = {Pew Research Center},
+  publisher = {Pew Research Center},
+  author    = {Vogels, Emily A.},
+  year      = {2020},
+  month     = {Aug},
+  note      = {[online, citováno 2022-03-13]}
 }
  @book{tep,
-    place={Praha},
-    title={Trénink pod kontrolou: metody, kontrola a vyhodnocení vlastního tréninku},
-    publisher={Grada Publ},
-    author={Neumann, Georg and Pfützner Arndt and Hottenrott, Kuno},
-    year={2007},
-    isbn={9788024709475}
+  place     = {Praha},
+  title     = {Trénink pod kontrolou: metody, kontrola a vyhodnocení vlastního tréninku},
+  publisher = {Grada Publ},
+  author    = {Neumann, Georg and Pfützner Arndt and Hottenrott, Kuno},
+  year      = {2007},
+  isbn      = {9788024709475}
 }
