--- a/Pulzní oxymetrie Truksa, Tvrdík/Kapitoly/Teoreticka/Oxymetrie.tex
+++ b/Pulzní oxymetrie Truksa, Tvrdík/Kapitoly/Teoreticka/Oxymetrie.tex
@@ -9,22 +9,22 @@ Pulzní oxymetrie je neinvazivní optická technika měření saturace kyslíku 
   \caption [Vztah mezi $PO_2$ a saturací kyslíku v krvi]{Vztah mezi $PO_2$ a saturací kyslíku v krvi, který byl před vynalezením metody pulzní oxymetrie využívaný, není lineární a tudíž nebylo snadné rychle a správně naměřené hodnoty interpretovat. \citep{ratznium_2006}, upraveno}
   \label{fig:PO2}
 \end{figure}
-\par Pulzní oxymetrie však v současnosti není již specializovanou metodou pro vojenské či zdravotnické účely, ale je používána i v zařízeních určených běžným uživatelům, a to nejen samostatně, ale i jakožto součást komplexnějších produktů. Oproti původnímu Millikanovu oxymetru navíc používáme přesnějších zdrojů světla, LED světlech o specifických vlnových délkách. Zároveň se dá měřit i na jiných částech těla, než je ucho - běžně dostupné oxymetry nejčastěji měří na prstu, existují však i varianty měřící na zápěstí.
+\par Pulzní oxymetrie však v současnosti není již specializovanou metodou pro vojenské či zdravotnické účely, ale je používána i v zařízeních určených běžným uživatelům, a to nejen samostatně, ale i jakožto součást komplexnějších produktů. Zároveň se dá měřit i na jiných částech těla, než je ucho - běžně dostupné oxymetry nejčastěji měří na prstu, existují však i varianty měřící na zápěstí.
 \subsection {Princip fungování}
 Srdce člověka, jak je obecně známo, funguje v cyklech. Pro krev v tepnách to znamená, že ve chvíli, kdy srdce vypuzuje krev, se zvýší její objem díky elasticitě tepen. Zvýšení tohoto objemu logicky vede k nižší propustnosti světla, díky čemuž mají pulzní oxymetry schopnost měřit srdeční tep.
 \par Měření saturace kyslíku využívá transportního proteinu hemoglobinu, který má v těle funkci přenosu některých plynů a vyskytuje se v erytrocytech většiny obratlovců. Pro plnění své funkce je schopen na sebe tyto plyny navázat a následně je vypustit. Při navázání různých plynů se mění jeho vlastnosti, čehož se využívá právě při měření zastoupení těchto plynů.
 \par Saturace kyslíku v krvi je pak udávána vztahem $SpO_2 = \frac{HbO_2}{\text{Hemoglobin celkem}}$, kde $HbO_2$ je oxyhemoglobin (hemoglobin s navázaným kyslíkem). Tento vztah se pro běžné měření oxymetrem, který umí rozlišovat jen mezi dvěma základními formami hemoglobinu, zjednodušuje na $SpO_2 = \frac{HbO_2}{HbO_2+Hb}$, kde $Hb$ je deoxyhemoglobin (hemoglobin bez navázaného kyslíku). Nové pokročilejší přístroje jsou však schopny detekovat i další formy hemoglobinu - karboxyhemoglobin a methemoglobin. Rovnice pro takovéto měření je pak $SpO_2 = \frac{HbO_2}{HbO_2+Hb+HbCO+HbMet}$, kde $HbCO$ je karboxyhemoglobin (hemoglobin s navázaným oxidem uhelnatým) a $HbMet$ je methemoglobin (hemoglobin, jehož železnatá ($Fe^{2+}$) část hemu (složka hemoglobinu) byla změněna na železitou ($Fe^{3+}$)). 
-\subsubsection{Aplikace Lambertova-Beerova zákona} Samotné měření saturace kyslíku v krvi pak probíhá na principu Lambertova-Beerova zákona, který popisuje pohlcováni elektromagnetické záření. Aplikace tohoto zákona je popsána v následujících rovnicích, které popisuje \cite{KYRIACOU}.
+\subsubsection{Aplikace Lambertova-Beerova zákona} Samotné měření saturace kyslíku v krvi pak probíhá na principu Lambertova-Beerova zákona, který popisuje pohlcováni elektromagnetického záření. Aplikace tohoto zákona je popsána v následujících rovnicích, které popisuje \cite{KYRIACOU}.
 \begin{equation}
   {\epsilon_{\lambda}cl} = A_{\lambda} = ln(T) = ln(\frac{I_s}{I_d})
   \label{EQ:Lambertův–Beerův zákon}
 \end{equation}\\
-Lambertův–Beerův zákon říká, že vynásobením molární absorpce při vlnové délce $\lambda$ ($\epsilon_{\lambda}$), koncentrace absorpční složky ($c$) a dráhy kterou musí světlo přes danou látku urazit ($l$), vyjde bezrozměrná veličina udávající jak daná látka pohlcuje světlo dané vlnové délky. Tato veličina se nazývá absorbance ($A_{\lambda}$). Její logaritmus udává naopak propustnost světla a nazýváme jej transmitance ($T$). Transmitanci také můžeme vyjádřit jako poměr mezi intenzitou světla které látkou projde při systole a intenzitou světla které látkou projde při diastole ($\frac{I_s}{I_d}$).\\
+Lambertův–Beerův zákon říká, že vynásobením molárního extinkčního koeficientu při vlnové délce $\lambda$ ($\epsilon_{\lambda}$), koncentrace absorpční složky ($c$) a dráhy kterou musí světlo prostředím urazit ($l$), vyjde bezrozměrná veličina udávající jak prostředí pohlcuje světlo dané vlnové délky. Tato veličina se nazývá absorbance ($A_{\lambda}$) a je zároveň logaritmem propustnosti světla, který nazýváme transmitance ($T$). Transmitanci také můžeme vyjádřit jako poměr mezi intenzitou světla, které prostředím projde při systole a intenzitou světla které prostředím projde při diastole ($\frac{I_s}{I_d}$).\\
 \begin{equation}
     A_{\lambda} = ln(\frac{I_d+AC_{\lambda}}{I_d})
     \label{EQ:ZAKLAD}
 \end{equation}\\
-Vzhledem k tomu, že jediné proměnlivé vlastnosti námi sledované látky, v tomto případě prstu, je množství a okysličenost krve, můžeme rozdíl mezi již zmíněnými intenzitami světla při různých stavech oběhového systému označit jako celou střídavou složku ($AC_{\lambda}$). To znamená že, při dané vlnové délce platí vztah $AC_{\lambda} = I_s - I_d$. Využitím tohoto vztahu vznikne rovnice \ref{EQ:ZAKLAD}.\\
+Vzhledem k tomu, že jediné proměnlivé vlastnosti námi sledovaného prostředí, v tomto případě prstu, je množství a okysličenost krve, můžeme rozdíl mezi již zmíněnými intenzitami světla při různých stavech oběhového systému označit jako celou střídavou složku ($AC_{\lambda}$). To znamená že, při dané vlnové délce platí vztah $AC_{\lambda} = I_s - I_d$. Využitím tohoto vztahu vznikne rovnice \ref{EQ:ZAKLAD}.\\
 \begin{equation}
     A_{\lambda} = ln(\frac{I_d+AC_{\lambda}}{I_d}) = ln(1+\frac{AC_{\lambda}}{I_d}) \simeq \frac{AC_{\lambda}}{I_d}
 \end{equation}\\
@@ -41,7 +41,7 @@ Jak již bylo řečeno, $AC_{\lambda}$ nabývá při měření velmi malých hod
 Poměr absorbancí ($R$) při dvou vhodných vlnových délkách (jak ukazuje rovnice \ref{EQ:poměr absorbancí}) a empiricky získaná kalibrační křivka se používají pro vypočítání $SpO_2$.\\
 
 \subsubsection{Volba vlnových délek}
-Jak již bylo zmíněno, hemoglobin má v závislosti na navázaném plynu různé vlastnosti. Jednou z těchto proměnlivých vlastností je i jeho absorpční spektrum (viditelné na obrázku \ref{fig:Absorpce}). Pro co nejlepší měření poměru měřených forem hemoglobinu je vhodné vybrat takové vlnové délky $\lambda_1$ a $\lambda_2$, u nichž je co největší rozdíl mezi absorpcí měřených forem hemoglobinu. Jak vyplývá z obrázku \ref{fig:Absorpce}, při měření podílu oxy- a deoxy- hemoglobinu je jejich isobestický bod (vlnová délka absorbována oběma látkami stejně) přibližně 805 nm. Pro výběr dvou vhodných vlnových délek je tedy potřeba vybrat jednu kratší a druhou delší, s co nejvyšším rozdílem.
+Jak již bylo zmíněno, hemoglobin má v závislosti na navázaném plynu různé vlastnosti. Jednou z těchto proměnlivých vlastností je i jeho absorpční spektrum (viditelné na obrázku \ref{fig:Absorpce}). Pro co nejlepší měření poměru forem hemoglobinu je vhodné vybrat takové vlnové délky $\lambda_1$ a $\lambda_2$, u nichž je co největší rozdíl mezi absorpcí měřených forem hemoglobinu. Jak vyplývá z obrázku \ref{fig:Absorpce}, při měření podílu oxy- a deoxy- hemoglobinu je jejich isobestický bod (vlnová délka absorbována oběma látkami stejně) přibližně 805 nm. Pro výběr dvou vhodných vlnových délek je tedy potřeba vybrat jednu kratší a druhou delší, s co nejvyšším rozdílem.
 \par Na kratší straně spektra je nejlepší a zároveň nejběžněji používanou vlnovou délkou 660 nm. Na delší straně spektra je rozdíl nejvyšší nad 950 nm, nicméně od této hranice je světlo velmi výrazně pohlcováno i vodou, která se nevyhnutelně v měřené tkáni bude také nacházet. Z toho důvodu se v praxi využívá 940nm světlo, jehož zdroje jsou zároveň i velmi dobře dostupné, což platí i pro 660nm. \citep{KYRIACOU}
 \begin{figure}[ht]
   \includegraphics[scale=1, center]{Kapitoly/Teoreticka/Obrazky/Absorpce.png}
