--- a/Pulzní oxymetrie Truksa, Tvrdík/Kapitoly/Teoreticka/Vyuziti.tex
+++ b/Pulzní oxymetrie Truksa, Tvrdík/Kapitoly/Teoreticka/Vyuziti.tex
@@ -2,11 +2,11 @@
 Jak již bylo zmíněno v úvodu, přístroje operující na principu pulzní oxymetrie jsou v našem životě již velmi běžné. To, co bylo před 80 lety naprostou technologickou novinkou, která byla používána jen pro vojenské účely, je v současnosti běžnou součástí chytrých náramků a hodinek, které podle jednoho výzkumu \citep{wearables} využíval v roce 2019 více než jeden z pěti Američanů. Ačkoliv nejsou zatím podobná data, jež by měřila změnu v tomto trendu od počátku epidemie Covidu, která prokazatelně zvýšila zájem lidí o vlastní zdraví a životní styl, dá se očekávat, že tato čísla se výrazně zvýšila, a to i u starší generace, jež podle výše zmíněného výzkumu využívala tato zařízení v srovnání s mladší a střední generací o třetinu méně.
 \par Zároveň je však tato metoda ve většině ohledů stále nepřekonaná a využívá se tedy stále velmi běžně ve zdravotnictví - ať už na jednotkách intenzivní péče, na operačních sálech nebo třeba pro novorozence. V poslední době jsou zároveň rozšiřovány možnosti této metody tak, aby dokázala měřit například přítomnost různých škodlivých látek, které by jinak byly vyhodnoceny jako normální okysličená krev.
 \subsection {Sport}
-Velmi častou metodou používanou při tréninku u vrcholových sportovců je cvičení v horších kyslíkových podmínkách, což znamená, že sportovci trénují za nižší koncentrace vdechovaného kyslíku ($FiO_2$). Nicméně, jak naznačují například \cite{fio2}, výsledná hodnota $SpO_2$ je ve vztahu k $FiO_2$ velmi vysoce individuální. To je způsobeno tím, že koncentrace kyslíku je velmi úzce spojena s jeho parciálním tlakem, který, jak již bylo ukázáno na obrázku \ref{fig:PO2}, nemá s $SpO_2$ lineární vztah. Pokud tedy chceme upravit přísun kyslíku, tak aby došlo ke konkrétnímu posunu v $SpO_2$, musíme si uvědomit, že je velmi vysoký rozdíl mezi minimální a maximální očekávanou výslednou hodnotou $SpO_2$. 
+Velmi častou metodou používanou při tréninku u vrcholových sportovců je cvičení v horších kyslíkových podmínkách, což znamená, že sportovci trénují za nižší koncentrace vdechovaného kyslíku ($FiO_2$). Nicméně, jak naznačují například \cite{fio2}, výsledná hodnota $SpO_2$ je ve vztahu k $FiO_2$ vysoce individuální. To je způsobeno tím, že koncentrace kyslíku je úzce spojena s jeho parciálním tlakem, který, jak již bylo ukázáno na obrázku \ref{fig:PO2}, nemá s $SpO_2$ lineární vztah. Pokud tedy chceme upravit přísun kyslíku, tak aby došlo ke konkrétnímu posunu v $SpO_2$, musíme si uvědomit, že je velice vysoký rozdíl mezi minimální a maximální očekávanou výslednou hodnotou $SpO_2$. 
 \par To znamená, že pro optimalizaci benefitů pro sportovce není vhodné nastavovat vnější prostředí na konkrétní hodnotu. Namísto toho je vhodné trénovat v adaptivním prostředí, které používá dat z pulzního oxymetru sportovce k přizpůsobení koncentrace kyslíku. Jde tedy o stejný princip jako u originálního Millikanova oxymetru, s tím rozdílem, že pro sportovce je naopak žádoucí kyslík držet na nižší hladině. \citep{sportuse}
 \subsubsection {Pulz}
-Vzhledem k tomu, že při funkci pulzního oxymetru je měřen i tep, je pulzní oxymetr velmi vhodný pro i pro amatérské a občasné sportovce. Různé tepové zátěže (v poměru k maximální tepové frekvenci) odpovídají různým typům cvičení, která mají různé cíle, tak jak je uvedeno v tabulce \ref{tab:MTF}. Pulzní oxymetry v chytrých náramcích a hodinkách, jež jsou zdaleka nejčastějšími pulzními oxymetry pro sportovce, mají tedy i možnost ukazovat typ cvičení a díky tomu i různé rady a informace pro uživatele.¨
-\par Samotný výpočet maximální tepové frekvence je pro takové zařízení však těžší. Vzorce pro tento výpočet obecně nejsou uznávány jako dostatečně přesné vzhledem k různorodosti každého člověka. Ačkoliv byly v minulosti studie, které se snažily vzorce upřesňovat na základě různých parametrů, nepanuje shoda na žádném vzorci ani na proměnných důležitých pro výpočet. Příkladem může být studie, která jako jediný parametr uvádí věk a od něj odvozuje jeden z nejpoužívanějších vzorců pro odhad ($HR_{Max}=211-0,64\times\text{věk}$). I tato studie však dochází k závěru, že "Předpovídání maximální tepové frekvence podle věku může být pro různé skupiny velmi pohodlné, avšak je potřeba brát v úvahu standardní odchylku 10,8 tepů za minutu." \citep{maxHR}
+Vzhledem k tomu, že při funkci pulzního oxymetru je měřen i tep, je pulzní oxymetr velmi vhodný pro i pro amatérské a občasné sportovce. Různé tepové zátěže (v poměru k maximální tepové frekvenci) odpovídají různým typům cvičení, která mají odlišné cíle, tak jak je uvedeno v tabulce \ref{tab:MTF}. Pulzní oxymetry v chytrých náramcích a hodinkách, jež jsou zdaleka nejčastějšími pulzními oxymetry pro sportovce, mají tedy i možnost ukazovat typ cvičení a díky tomu například i rady a informace pro uživatele.
+\par Samotný výpočet maximální tepové frekvence je pro takové zařízení však těžší. Vzorce pro tento výpočet obecně nejsou uznávány jako dostatečně přesné vzhledem k různorodosti každého člověka. Ačkoliv byly v minulosti studie, které se snažily vzorce upřesňovat na základě různých parametrů, nepanuje shoda na žádném vzorci ani na proměnných důležitých pro výpočet. Příkladem může být studie, která jako jediný parametr uvádí věk a od něj odvozuje jeden z nejpoužívanějších vzorců pro odhad ($HR_{Max}=211-0,64\times\text{věk}$). Tato studie však dochází k závěru, že "Předpovídání maximální tepové frekvence podle věku může být pro různé skupiny velmi pohodlné, avšak je potřeba brát v úvahu standardní odchylku 10,8 tepů za minutu." \citep{maxHR}. K závěru svědčícímu proti předpovědi fyzických výsledků pomocí složitých výpočtů dochází i \cite{Cooper}. V jejich studii zaměřující se na odhad času v půlmaratonu zkoumali kromě stavby těla i  uběhlou vzdáleností v Cooperově testu a došli k závěru, že samotný 12minutový Cooperův test je v předpovídání přesnější, než jakákoliv rovnice zahrnující tělesné údaje.
 \begin{table}[h]
     \centering
     \begin{tabular}{p{0.25\linewidth} | p{0.1\linewidth} | p{0.30\linewidth} | p{0.24\linewidth}}
@@ -17,7 +17,7 @@ Vzhledem k tomu, že při funkci pulzního oxymetru je měřen i tep, je pulzní
         Na kyslíkový dluh               & 85-90                    & Zvyšování výkonnosti, spalování kyslíku ve svalech, srdeční zátěž & Nadměrné pocení, lapání po dechu    \\
         Čistě anaerobní                 & 90-100                   & Zvykání těla na práci bez spalování kyslíku, maximální výkon      & Vysoký stres, nadměrné pocení, pocit dušení
     \end{tabular}
-    \caption[Typy cvičení podle maximální tepové frekvence]{Jednou z důležitých sledovaných hodnot pro sportovce je tepová zátěž, která odpovídá různým typům cvičení. \citep{tep}}%doplnit citaci
+    \caption[Typy cvičení podle maximální tepové frekvence]{Jednou z důležitých sledovaných hodnot pro sportovce je tepová zátěž, která odpovídá různým typům cvičení. (Převzato ze skript ke Kurzu pro instruktory indoor cyklistiky (lektorky M. Lukášová, J. Vejpustková) a \cite{tep}}
     \label{tab:MTF}
 \end{table}
 \subsection {Zdravotnictví}
